--- a/CSS_Test/src/main/webapp/resources/assets/css/main.css
+++ b/CSS_Test/src/main/webapp/resources/assets/css/main.css
@@ -153,13 +153,13 @@ input, select, textarea {
 		-ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
-		color: #ff6666;
+		color: #595a5c;
 		text-decoration: none;
 	}
 
 		a:hover {
-			border-bottom-color: #ff6666;
-			color: #ff6666 !important;
+			border-bottom-color: #595a5c;
+			color: #595a5c !important;
 		}
 
 			a:hover strong {
@@ -1797,7 +1797,7 @@ input, select, textarea {
 	}
 
 	header.major > :last-child {
-		border-bottom: solid 3px #ff6666;
+		border-bottom: solid 3px #595a5c;
 		display: inline-block;
 		margin: 0 0 2em 0;
 		padding: 0 0.75em 0.5em 0;
@@ -1833,7 +1833,7 @@ input, select, textarea {
 		-webkit-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
-		background: #ff6666;
+		background: #595a5c;
 		border-radius: 0.375em;
 		border: none;
 		border: solid 1px rgba(210, 215, 217, 0.75);
@@ -1864,8 +1864,8 @@ input, select, textarea {
 		input[type="url"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #ff6666;
-			box-shadow: 0 0 0 1px #ff6666;
+			border-color: #595a5c;
+			box-shadow: 0 0 0 1px #595a5c;
 		}
 
 	select {
@@ -1880,7 +1880,7 @@ input, select, textarea {
 
 		select option {
 			color: #3d4449;
-			background: #ff6666;
+			background: #595a5c;
 		}
 
 		select:focus::-ms-value {
@@ -1948,7 +1948,7 @@ input, select, textarea {
 
 			input[type="checkbox"] + label:before,
 			input[type="radio"] + label:before {
-				background: #ff6666;
+				background: #595a5c;
 				border-radius: 0.375em;
 				border: solid 1px rgba(210, 215, 217, 0.75);
 				content: '';
@@ -1967,14 +1967,14 @@ input, select, textarea {
 		input[type="radio"]:checked + label:before {
 			background: #3d4449;
 			border-color: #3d4449;
-			color: #ff6666;
+			color: #595a5c;
 			content: '\f00c';
 		}
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #ff6666;
-			box-shadow: 0 0 0 1px #ff6666;
+			border-color: #595a5c;
+			box-shadow: 0 0 0 1px #595a5c;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2311,7 +2311,7 @@ input, select, textarea {
 			}
 
 			ul.contact li:before {
-				color: #ff6666;
+				color: #595a5c;
 				display: inline-block;
 				font-size: 1.5em;
 				height: 1.125em;
@@ -2370,8 +2370,8 @@ input, select, textarea {
 			}
 
 				ul.pagination li > .page.active {
-					background-color: #ff6666;
-					color: #ff6666 !important;
+					background-color: #595a5c;
+					color: #595a5c !important;
 				}
 
 					ul.pagination li > .page.active:hover {
@@ -2488,8 +2488,8 @@ input, select, textarea {
 		background-color: transparent;
 		border-radius: 0.375em;
 		border: 0;
-		box-shadow: inset 0 0 0 2px #ff6666;
-		color: #ff6666 !important;
+		box-shadow: inset 0 0 0 2px #595a5c;
+		color: #595a5c !important;
 		cursor: pointer;
 		display: inline-block;
 		font-family: 'Jeju Gothic', serif;
@@ -2560,9 +2560,9 @@ input, select, textarea {
 		input[type="button"].primary,
 		button.primary,
 		.button.primary {
-			background-color: #ff6666;
+			background-color: #595a5c;
 			box-shadow: none;
-			color: #ff6666 !important;
+			color: #595a5c !important;
 		}
 
 			input[type="submit"].primary:hover,
@@ -2677,7 +2677,7 @@ input, select, textarea {
 			}
 
 				.features article .icon:before {
-					color: #ff6666;
+					color: #595a5c;
 					font-size: 2.75rem;
 					position: relative;
 					top: 0.05em;
@@ -3110,20 +3110,20 @@ input, select, textarea {
 
 	#sidebar {
 		-moz-flex-grow: 0;
-		-webkit-flex-grow: 0;
+		-webkit-flex-grow: 0; 
 		-ms-flex-grow: 0;
 		flex-grow: 0;
 		-moz-flex-shrink: 0;
 		-webkit-flex-shrink: 0;
-		-ms-flex-shrink: 0;
+		-ms-flex-shrink: 0; 
 		flex-shrink: 0;
 		-moz-transition: margin-left 0.5s ease, box-shadow 0.5s ease;
 		-webkit-transition: margin-left 0.5s ease, box-shadow 0.5s ease;
 		-ms-transition: margin-left 0.5s ease, box-shadow 0.5s ease;
 		transition: margin-left 0.5s ease, box-shadow 0.5s ease;
-		background-color: #ff6666;
+		background-color: #a1a3a6;
 		font-size: 0.9em;
-		position: relative;
+		position: relative; 
 		width: 26em;
 	}
 
@@ -3161,11 +3161,11 @@ input, select, textarea {
 				width: calc(100% + 4.44444em);
 			}
 			
-			#sidebar .button{
+			/* #sidebar .button{
 				box-shadow: inset 0 0 0 2px #ffffff;
 				color: #ffffff !important;				
-			}
-
+			} */
+  
 		#sidebar .toggle {
 			text-decoration: none;
 			-moz-transition: left 0.5s ease;
@@ -3335,7 +3335,7 @@ input, select, textarea {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		border-bottom: solid 5px #ff6666;
+		border-bottom: solid 5px #595a5c;
 		padding: 6em 0 1em 0;
 		position: relative;
 	}
@@ -3530,7 +3530,7 @@ input, select, textarea {
 		}
 
 			#menu ul a:hover, #menu ul span:hover {
-				color: #ff6666;
+				color: #595a5c;
 			}
 
 			#menu ul a.opener, #menu ul span.opener {
@@ -3568,8 +3568,8 @@ input, select, textarea {
 				}
 
 				#menu ul a.opener:hover:before, #menu ul span.opener:hover:before {
-					color: #ff6666;
-				}
+					color: #595a5c;
+				} 
 
 				#menu ul a.opener.active + ul, #menu ul span.opener.active + ul {
 					display: block;
