--- a/0_yondai/src/main/webapp/resources/assets/css/main.css
+++ b/0_yondai/src/main/webapp/resources/assets/css/main.css
@@ -3122,7 +3122,7 @@ input, select, textarea {
 		-webkit-transition: margin-left 0.5s ease, box-shadow 0.5s ease;
 		-ms-transition: margin-left 0.5s ease, box-shadow 0.5s ease;
 		transition: margin-left 0.5s ease, box-shadow 0.5s ease;
-		background-color: #f4fa98;   
+		background-color: #a1abe3;    
 		font-size: 0.9em;
 		position: relative; 
 		width: 26em;
